# machine-learning-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml
src/linear_regression/: qrio_ml_linear_regression.py  test_qrio_ml_linear_regression.py
src/logistic_regression/: qrio_aws_lambda_deploy_handler.py  qrio_ml_logistic_regression.py  test_qrio_ml_logistic_regression.py
src/logistic_regression/docs/: qrio_aws_lambda_deploy_handler.md
src/multi_layer_perceptron/: qrio_ml_multi_layer_perceptron.py  test_qrio_ml_multi_layer_perceptron.py
