[project]
name = "machine-learning-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
pythonpath = [
    "src/linear_regression",
    "src/logistic_regression",
    "src/multi_layer_perceptron",
]
testpaths = [
    "src/linear_regression",
    "src/logistic_regression",
    "src/multi_layer_perceptron",
]
